<resources>
    <string name="app_name">资源下载器</string>
    <string name="menu_title">资源下载器</string>
    <string name="add_uri">添加</string>
    <string name="add_torrent">选择种子</string>
    <string name="add_uri_hint">添加链接提示：支持迅雷、HTTP、磁力和种子下载</string>
    <string name="uri_is_empty">链接不能为空!</string>

    <string name="welcome_message">正在初始化...</string>
    <string name="welcome_enter_message">正在进入应用...</string>

    <string name="menu_downloading">下载中</string>
    <string name="menu_downloaded">下载完成</string>
    <string name="menu_setting">设置</string>

    <string name="filter_all">全部</string>
    <string name="filter_video">视频</string>
    <string name="filter_audio">音频</string>
    <string name="filter_image">图片</string>
    <string name="filter_other">其他</string>

    <string name="single_download_btn">开始下载</string>
    <string name="multi_download_btn">下载全部</string>

    <string name="ok_btn">确定</string>
    <string name="cancel_btn">取消</string>

    <string name="title_select_device">选择下载的设备</string>
    <string name="title_select_download_path">选择下载目录</string>
    <string name="title_select_torrent_file">选择一个种子文件</string>

    <string name="start_to_download">开始下载</string>

    <string name="title_task_item_menu">任务菜单</string>

    <string name="menu_resume_task">继续下载</string>
    <string name="menu_pause_task">暂停下载</string>
    <string name="menu_delete_task">删除任务</string>
    <string name="menu_play_done_task">打开任务</string>

    <string name="common_setting">通用设置</string>
    <string name="xl_setting">默认下载设置</string>
    <string name="aria2_setting">Aria2下载设置</string>
    <string name="aria2_setting_status">Aria2状态</string>

    <string name="common_setting_download_path">添加下载任务时的默认下载路径</string>
    <string name="common_setting_max_thread">最大同时下载任务数量</string>
    <string name="common_setting_download_speed_limit">下载速度限制</string>
    <string name="common_setting_default_download_engine">添加下载任务时的默认下载方式</string>

    <string name="xl_engine">默认下载</string>
    <string name="aria2_engine">Aria2下载</string>
    <string name="download_with_xl">使用默认下载</string>
    <string name="download_with_aria2">使用Aria2下载</string>


    <string name="xl_setting_download_speed_limit">默认下载速度限制</string>
    <string name="aria2_setting_download_speed_limit">Aria2下载速度限制</string>

    <string name="speed_no_limit">无限制</string>

    <string name="new_task_size_info">已选%1$d个文件 共%2$s</string>
    <string name="download_size_info">剩余：%1$s</string>

    <string name="confirm_delete_task">确定删除任务？</string>
    <string name="delete_file_at_same_time">同时删除文件</string>


    <string name="defalut_engine_initailize_error">默认下载器>> 加载失败!</string>
    <string name="defalut_engine_initailize_succeed">默认下载器>> 加载成功!</string>

    <string name="aria2_engine_initailize_error">Aria2下载器>> 加载失败!</string>
    <string name="aria2_engine_initailize_succeed">Aria2下载器>> 加载成功!</string>
    <string name="aria2_setting_status_obtaining">获取服务状态中...</string>
    <string name="aria2_setting_status_on">Aria2服务已开启</string>
    <string name="aria2_setting_status_off">Aria2服务已停止</string>

    <string name="subscribe_start_notify">设备收到一个订阅请求！</string>
    <string name="subscribe_finish_notify">订阅成功！影片正在下载中</string>

    <string name="add_multi_tasks_title">添加多个任务</string>
    <string name="initailizing_url">正在解析：%1$s</string>
    <string name="initailizing_result">已解析：%1$s/%2$s</string>
    <string name="initailized_success">成功：%1$s</string>
    <string name="initailized_failed">失败：%1$s</string>
    <string name="show_initialization_detail">查看详情</string>
    <string name="multi_task_detail_title">多任务详情</string>
    <string name="multi_task_detail_failed_links">失败链接</string>
</resources>