<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@drawable/station_dialog_background"
            android:paddingHorizontal="45dp"
            android:paddingTop="30dp"
            android:paddingBottom="45dp"
            android:layout_width="750dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/successLinksView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:textFontWeight="500"
                    android:textSize="24sp"
                    android:text="@string/multi_task_detail_title"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/successLinksRV"
                    android:background="@drawable/file_list_bg"
                    android:layout_width="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    android:layout_height="263dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/failedLinksView"
                android:layout_marginTop="23dp"
                android:background="@drawable/file_list_bg"
                android:layout_below="@id/successLinksView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/multi_task_detail_failed_links"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/failedLinksRV"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="133dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/downloadBtn"
                android:layout_marginTop="23dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/failedLinksView"
                android:text="@string/single_download_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>
</layout>